assets/less/edware.less
/* ... */
.sidebar {
    padding: 15px;
    width: 170px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    background: @color-B6;
    color: @color-B1;
    position: absolute;
    top: 0px;
    bottom: 0px;

    h1 {
    color: @color-A1;
    font-size: 25px;
    }

    h3 {
    line-height: 20px;
    }

    .teacher, .date, .psychometric, .policy, .adminDetails {
    font-size: 13px;
    }
}

.contentWrapper {
    width: 740px;
    margin-left: 200px;
    padding-bottom: 24px;

    .overallScoreSection {
    min-height: 70px;
    margin: 20px 0 0 20px;


    .info {
        float: left;
        margin: 0px 10px;

        .indicator {
        background-position: no-repeat;
        border-radius: 5px 5px 5px 5px;
        float: left;
        width: 65px;
        height: 35px;
        font-size: 18px;
        text-align: center;
        display: table;

        .asmtScore {
            vertical-align:middle;
            display: table-cell;
        }
        }

        .overallText {
        font-size: 16px;
        color: @color-B1;
        line-height: 32px;
        }

        .overallDesc {
        font-size: 22px;
        float: right;
        display: table;
        height: 35px;
        margin-left: 10px;

        .scoreName{
            vertical-align:middle;
            display: table-cell;
        }
        }
    }

    .info2 {
        /*background: url("../images/dottedline.png") repeat-y top left;*/
        border-left: dashed 1px @color-B4;
        margin-left: 360px;
        margin-right: 20px;
        padding-left: 20px;
        font-size: 14px;
        min-height: 70px;
    }
    }
}

.gridHeight100 {

    tr.jqgrow td {
    height: 100px;
    }
    .ui-jqgrid tr.footrow {
    td {
        height: 100px;
    }
    }

  .ui-jqgrid tr.jqgrow td {
    white-space: normal !important;
    padding: 0px 2px;
    a {
      float: left;
    }
  }

  .ui-jqgrid .ui-jqgrid-view {
    font-size: 13px;
  }

  .ui-jqgrid .ui-jqgrid-htable th.ui-th-column:first-child div {
      margin-left: 20px;
  }

  .alignmentLine {
      background: @color-C9 !important;
      height: 100px;
      position: absolute;
      margin-top: -40px;
      width: 1px;
      display: none;

  }

  .leftPercentageTotal{
      float: left;
      width: 35px;
      height: 20px;
  }

  .rightPercentageTotal{
      float: right;
      width: 35px;
      height: 20px;
  }
}

.populationBar {
    width: 265px;
    margin-left: 10px;
    float: left;

    .bar {
    font-size: 11px;
    font-weight: normal;
    cursor: pointer;
    }
}

#select_measure_title {
    float: left;
    margin-right: 5px;
}

/* Sorting Arrow styles */
.ui-icon {
    height: 16px;
    width: 16px;
}
.ui-icon, .ui-widget-content .ui-icon {
  background-image: url("../css/3p/jqueryui/1.10.2/themes/base/images/ui-icons_222222_256x240.png") !important;
}
.ui-icon-triangle-1-s {
    background-position: -64px -16px;
}

.ui-icon-triangle-1-n {
    background-position: 0 -16px;
    margin-left: 1px;
}

.ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled {
    opacity: 0.35;
}


.reportInfoWrapper {
    width: 580px;
}

/* Loading image style */
.loader {
    position:absolute;
    z-index: 99;
    width: 100%;

    height: 100%;
    left: 0;
    top: 170px;
    bottom:0;
    margin:0;
    overflow:visible;
    display: none;

    .message {
    background: url("../images/loading.gif") no-repeat top center;
    font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #424242;
    width: 460px;
    margin: 165px auto 0 auto;
    text-align: center;
    height: 40px;
    padding-top: 36px;
    }
}

/* breadcrumb arrow styles */
.arrowSeperator {
    background: url("../images/css_images.png") no-repeat;
    background-position: -379px 0;
    float: left;
    height: 18px;
    margin: 0 5px;
    width: 8px;
}


.printContent { display: none; }
.assessmentOtherInfoHeader { display: none;}

.printFooterPopover {
    label {
    display: inline-block;
    }
    input {
    margin: 0 5px 0 0;
    }
}

#errorMessage{
    padding-top: 10px;
    font-size: 15px;
    font-weight: normal;
    display: none;
}

.edwareExportField {
    display: none;
}

.edwarePopover {

    .popover-content {
        padding: 0px 17px 17px 17px;
    }

    .edwareScrollable {
        overflow-y: auto;
        overflow-x: hidden;
    }

    .mask {
        height: 20px;
        position: relative;
    }
}

